--- a/client/src/app/modules/administration/components/referentials/referential-confrere/referential-confrere.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-confrere/referential-confrere.component.html
@@ -113,8 +113,8 @@
             </td>
             <td>
               <autocomplete-city [(model)]="selectedEntity.city" [modelCountry]="selectedEntity.country"
-                [form]="entityForm2" propertyName="city" [isMandatory]="true" [isDisabled]="!editMode" label="Ville"
-                (onOptionSelected)="fillPostalCode($event)">
+                [preFilterPostalCode]="selectedEntity.postalCode" [form]="entityForm2" propertyName="city"
+                [isMandatory]="true" [isDisabled]="!editMode" label="Ville" (onOptionSelected)="fillPostalCode($event)">
               </autocomplete-city>
             </td>
             <td>
