--- a/client/src/app/modules/administration/components/referentials/referential-regie/referential-regie.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-regie/referential-regie.component.html
@@ -65,8 +65,8 @@
             </td>
             <td>
               <autocomplete-city [(model)]="selectedEntity.city" [modelCountry]="selectedEntity.country"
-                [form]="entityForm" propertyName="city" [isMandatory]="true"
-                (onOptionSelected)="fillPostalCode($event)">
+                [preFilterPostalCode]="selectedEntity.postalCode" [form]="entityForm" propertyName="city"
+                [isMandatory]="true" (onOptionSelected)="fillPostalCode($event)">
               </autocomplete-city>
             </td>
             <td>
