--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -37,12 +37,12 @@
                   </td>
                   <td>
                     <generic-input [(model)]="selectedResponsable.lastname" label="Nom" [form]="principalForm"
-                      propertyName="lastname" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="20">
+                      propertyName="lastname" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="40">
                     </generic-input>
                   </td>
                   <td>
                     <generic-input [(model)]="selectedResponsable.firstname" label="Prénom" [form]="principalForm"
-                      propertyName="firstname" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="20">
+                      propertyName="firstname" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="40">
                     </generic-input>
                   </td>
                   <td>
@@ -131,8 +131,9 @@
                   </td>
                   <td>
                     <autocomplete-city [(model)]="selectedResponsable.city" [modelCountry]="selectedResponsable.country"
-                      [form]="principalForm" propertyName="city" [isMandatory]="false" [isDisabled]="!editMode"
-                      label="Ville" (onOptionSelected)="fillPostalCode($event)">
+                      [preFilterPostalCode]="selectedResponsable.postalCode" [form]="principalForm" propertyName="city"
+                      [isMandatory]="false" [isDisabled]="!editMode" label="Ville"
+                      (onOptionSelected)="fillPostalCode($event)">
                     </autocomplete-city>
                   </td>
                   <td>
@@ -174,12 +175,12 @@
                       [form]="principalForm" propertyName="isBouclette"></generic-toggle>
                   </td-->
                   <td>
-                    <generic-input [(model)]="tiers.rffFormaliteRate" label="Taux RCA Formalité" [form]="principalForm"
-                      propertyName="rcaFormaliteRate" type="number"></generic-input>
+                    <generic-input [(model)]="selectedResponsable.rffFormaliteRate" label="Taux RCA Formalité"
+                      [form]="principalForm" propertyName="rcaFormaliteRate" type="number"></generic-input>
                   </td>
                   <td>
-                    <generic-input [(model)]="tiers.rffInsertionRate" label="Taux RCA Insertion" [form]="principalForm"
-                      propertyName="rcaInsertionRate" type="number"></generic-input>
+                    <generic-input [(model)]="selectedResponsable.rffInsertionRate" label="Taux RCA Insertion"
+                      [form]="principalForm" propertyName="rcaInsertionRate" type="number"></generic-input>
                   </td>
                 </tr>
               </table>
