add gifted status for invoice item and rewrite all invoiceItem computation on IQuotation

--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -30,7 +30,7 @@
               </td>
             </tr>
           </table>
-          <table class="full-width" *ngIf="announcement.confrere!=null && announcement.confrere!=undefined">
+          <table *ngIf="announcement.confrere!=null && announcement.confrere!=undefined">
             <tr>
               <td>
                 <generic-datepicker [(model)]="announcement.publicationDate" label="Date de publication"
