--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -72,7 +72,9 @@
               <tr class="mat-row">
                 <td class="mat-cell">
                   {{invoiceItem.label}} <mat-icon inline="true"
-                    matTooltip="Veuillez enregistrer pour pouvoir modifier le prix appliqué"
+                    [matTooltip]="invoiceItem.isGifted?'Ne plus offrir cette ligne de facturation':'Offrir cette ligne de facturation'"
+                    *ngIf="editMode" class="info-icon pointer" (click)="toggleIsGifTed(invoiceItem)">redeem</mat-icon>
+                  <mat-icon inline="true" matTooltip="Veuillez enregistrer pour pouvoir modifier le prix appliqué"
                     *ngIf="editMode && invoiceItem.billingItem.billingType.canOverridePrice==true && !invoiceItem.id && !invoiceItem.invoice"
                     class="info-icon">info</mat-icon>
                 </td>
@@ -84,7 +86,7 @@
                   *ngIf="editMode && invoiceItem.billingItem.billingType.canOverridePrice==true && invoiceItem.id && !invoiceItem.invoice">
                   <generic-input [(model)]="invoiceItem.preTaxPrice" label="" [form]="invoiceManagementForm"
                     [propertyName]='"preTaxPrice"+indexInvoiceItem+indexAsso' [isMandatory]="true" type="number"
-                    step="0,01" (onInputChange)="itemChange()" hint="Laisser vide pour recalculer le prix">
+                    step="0,01" (onInputChange)="itemChange(invoiceItem)" hint="Laisser vide pour recalculer le prix">
                   </generic-input>
                 </td>
               </tr>
@@ -94,14 +96,6 @@
                 </td>
                 <td class="td-price remise mat-cell">
                   - {{invoiceItem.discountAmount|number}} €
-                </td>
-              </tr>
-              <tr class="mat-row" *ngIf="invoiceItem.vat">
-                <td class="mat-cell">
-                  {{invoiceItem.vat.label}}
-                </td>
-                <td class="td-price mat-cell">
-                  {{invoiceItem.vatPrice|number}} €
                 </td>
               </tr>
             </ng-container>
